vercel package manager issues fix

--- a/docs/package.json
+++ b/docs/package.json
@@ -2,6 +2,7 @@
   "name": "nativecn-docs",
   "version": "0.0.1",
   "description": "NativeCN docs",
+  "packageManager": "pnpm@8.15.8",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
