--- a/docs/package.json
+++ b/docs/package.json
@@ -2,7 +2,7 @@
   "name": "nativecn-docs",
   "version": "0.0.1",
   "description": "NativeCN docs",
-  "packageManager": "pnpm@8.15.9+sha256.daa27a0b541bc635323ff96c2ded995467ff9fe6d69ff67021558aa9ad9dcc36",
+  "packageManager": "pnpm@8.15.9",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -23,8 +23,8 @@
     "babel-loader": "^10.0.0",
     "clsx": "^2.1.1",
     "next": "^13.0.6",
-    "nextra": "latest",
-    "nextra-theme-docs": "latest",
+    "nextra": "^2.13.2",
+    "nextra-theme-docs": "^2.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
