--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@nativecn/cli",
-  "version": "0.3.5",
+  "version": "0.3.6",
   "private": false,
   "description": "CLI tool for initializing and managing NativeCN components in React Native projects",
   "author": "major tom <tailwiinder@gmail.com>",
   "license": "MIT",
-  "homepage": "https://github.com/tailwiinder/nativecn#readme",
+  "homepage": "https://www.nativecn.xyz/",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tailwiinder/nativecn.git"
