--- a/docs/.babelrc
+++ b/docs/.babelrc
@@ -1,3 +1,14 @@
 {
-  "presets": ["next/babel"]
+  "presets": [
+    "next/babel",
+    "@babel/preset-typescript"
+  ],
+  "plugins": [
+    ["@babel/plugin-transform-react-jsx", {
+      "runtime": "automatic",
+      "importSource": "nativewind"
+    }],
+    "@babel/plugin-transform-flow-strip-types",
+    "react-native-reanimated/plugin"
+  ]
 } 
