--- a/docs/package.json
+++ b/docs/package.json
@@ -20,8 +20,8 @@
   "homepage": "https://github.com/tailwiinder/nativecn#readme",
   "dependencies": {
     "@babel/core": "^7.26.10",
-    "babel-loader": "^10.0.0",
     "clsx": "^2.1.1",
+    "nativewind": "^4.0.1",
     "next": "^13.0.6",
     "nextra": "^2.13.2",
     "nextra-theme-docs": "^2.13.2",
@@ -29,23 +29,29 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-native": "^0.78.1",
-    "react-native-reanimated": "^3.17.1",
+    "react-native-reanimated": "^3.16.2",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
     "tailwind-merge": "^3.0.2",
     "tailwind-react-native-classnames": "^1.5.1",
     "twrnc": "^4.6.1"
   },
   "devDependencies": {
+    "@babel/plugin-transform-flow-strip-types": "^7.26.5",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.27.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "18.11.10",
     "@types/react-native-web": "^0.19.0",
     "autoprefixer": "^10.4.21",
+    "babel-loader": "^10.0.0",
     "babel-preset-expo": "^12.0.9",
     "expo": "^52.0.40",
-    "nativewind": "3.0.0-next.33",
     "postcss": "^8.5.3",
     "postcss-import": "^16.1.0",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^3.4.17",
     "typescript": "^4.9.3"
   }
 }
